fixed nav, images, and some spacing

--- a/index.css
+++ b/index.css
@@ -73,9 +73,9 @@ a{
 /* Header section styles*/
 nav a{
     display:inline-block;
-    padding:1% 0;
-    width: 10%;
-    border-radius: 10px;
+    padding:.3%;
+    width: 12%;
+    border-radius: 15px;
     text-align: center;
     color:white;
 }
@@ -85,27 +85,32 @@ nav a{
     background:#FF764E;
 }
 .blue{
-    margin:0 24%;
+    margin:0 20%;
     background:#5eD3EB;
 }
 
 .yellow{
-    margin-right:10%;
+    margin-right:8%;
     background:#FFCD69;
 }
 
 /*Top section styles*/
 .top{
     position: relative;
+    margin-bottom:3%;
 }
 
 .left img{
     border-radius:50%;
-    width:70%;
+    width:50%;
 }
 .left, .right{
     display: inline-block;
     text-align: center;
+}
+
+.right{
+    margin
 }
 
 .left{
@@ -120,7 +125,7 @@ nav a{
 }
 
 .bottomImg{
-    height:50vh;
+    height:30vh;
     background-image: url('assets/footer_img.jpg');
     background-repeat: no-repeat;
     background-size:cover;
@@ -142,4 +147,21 @@ footer{
 .middle p{
     margin-left:40%;
     width:20%;
+    margin-bottom:5%;
+}
+.middle em{
+    color:black;
+    font-weight:bolder;
+}
+
+.intro{
+    background:tan;
+    margin-right:5%;
+    margin-left: 5%;
+    margin-bottom:2%;
+    color:white;
+    padding:2%;
+    text-align:center;
+    font-family: 'Roboto Mono';
+    font-size: 2rem;
 }
